# blog-v2

./: .cliff.toml  .dockerignore  .env.example  .gitignore  .release-it-custom-version.mjs  .release-it.json  .vercel-webhook-test.md  CLAUDE.md  Dockerfile.nginx  Dockerfile.node  Dockerfile.subgraph  README.md  astro.config.mjs  docker-compose.test.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  turbowatch.ts
apps/admin/: README.md  codegen.ts  package.json  vite.config.ts
apps/graphql/: README.md  eslint.config.js  package.json  tsconfig.json  vitest.e2e.config.ts
apps/qf-simulator/: README.md  index.html  package.json  vite.config.ts
apps/rest/: package.json  tsconfig.json  vitest.e2e.config.ts
apps/subgraph/: README.md  docker-compose.yml  package.json  schema.graphql  subgraph.yaml
apps/trpc/: package.json  vitest.config.ts  vitest.e2e.config.ts
apps/vote-prover/: README.md  package.json
apps/vote-prover/prover/lib/: Cargo.toml
apps/vote-prover/prover/lib/fixtures/: anvil_proof.json
apps/vote-prover/prover/lib/src/: lib.rs
apps/vote-prover/prover/script/: Cargo.toml
apps/vote-prover/prover/script/src/: main.rs
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/widget/: index.html  package.json  tsconfig.json  vite.config.ts
docker/: nginx.conf  subgraph-entrypoint.sh
docs/adr/: 0001-monorepo-with-pnpm-and-turborepo.md  0002-design-system-first.md  0003-rendering-and-hosting.md  README.md  (+30 more)
scripts/: init.sh  nuke.sh  stop.sh  test.sh
(+128 files in other folders)
