[package]
name = "vote-prover-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
alloy-primitives = { version = "1", default-features = false, features = ["rlp"] }
alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
alloy-trie = { version = "0.9", default-features = false }

[dev-dependencies]
bincode = "1.3"
serde_json = "1"
tempfile = "3"
