[package]
name = "vote-prover-script"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-sdk = { workspace = true }
hex = { workspace = true }
vote-prover-lib = { path = "../lib" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1", features = ["provider-http", "rpc-types", "signer-local", "network"] }
anyhow = "1.0"
bincode = "1.3"
serde_json = "1"
